# uncertaintyTE

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.txt
cmake/: FindMAGMA.cmake  FindSuiteSparse.cmake
include/: Camera.h  ColmapIO.h  FactoryIO.h  IO.h  Image.h  JacobianComposer.h  JacobianIO.h  OpenmvgIO.h  Point2D.h  Point3D.h  RadialCamera.h  ScaledDenseMatrix.h  ScaledSparseMatrix.h  Scene.h  auxCmd.h  bal_problem.h  compute.h  matlabInterface.h  snavely_reprojection_error.h  uncertainty.h  uncertainty_mex.h
libs/compiled_libraries/linux/: libatlas.so.3.0  libcblas.so.3.0  libf77blas.so.3.0  liblapack_atlas.so.3.0  libquadmath.so.0.0.0
mex/: mex_link.sh  uncertainty_mex.cpp
scripts/Matlab/: load_unc.m  output.cov
src/: CMakeLists.txt  ColmapIO.cpp  FactoryIO.cpp  IO.cpp  Image.cpp  JacobianComposer.cpp  JacobianIO.cpp  OpenmvgIO.cpp  Point2D.cpp  Point3D.cpp  RadialCamera.cpp  ScaledDenseMatrix.cpp  ScaledSparseMatrix.cpp  Scene.cpp  Source.def  auxCmd.cpp  bal_problem.cpp  compute.cpp  matlabInterface.cpp  uncertainty.cpp
src/matlab/: mex_uncertainty.cpp
src/software/: main_uncertainty.cpp
src/test_eigValues/: CMakeLists.txt  covarianceEigenValues_test.cpp
src/uncertaintyTE/: AliceVisionIO.cpp  AliceVisionIO.h  Camera.cpp  Camera.h  ColmapIO.cpp  ColmapIO.h  FactoryIO.cpp  FactoryIO.h  IO.cpp  IO.h  Image.cpp  Image.h  JacobianComposer.cpp  JacobianComposer.h  JacobianIO.cpp  JacobianIO.h  OpenmvgIO.cpp  OpenmvgIO.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RadialCamera.cpp  RadialCamera.h  ScaledDenseMatrix.cpp  ScaledDenseMatrix.h  ScaledSparseMatrix.cpp  ScaledSparseMatrix.h  Scene.cpp  Scene.h  auxCmd.cpp  auxCmd.h  bal_problem.cpp  compute.cpp  compute.h  matlabInterface.cpp  matlabInterface.h  snavely_reprojection_error.h  uncertainty.cpp  uncertainty.h  (+1 more)
test/DenseMatrix/: inv_in_01.txt  inv_out_01.txt  uncTest_DenseMatrix.cpp
test/EigValues/: output.cov
test/FixPts/: uncTest_FixPts.cpp
test/SparseMatrix/: inv_in_01.txt  inv_out_01.txt  multipl_in_01.txt  multipl_in_02.txt  multipl_out_01.txt  uncTest_SparseMatrix.cpp  uncTest_SparseMatrix.h
test/input_jacobians/: 01_Cube.jacob  02_Flat.jacob  03_Toy.jacob  04_Daliborka.jacob  template_of_jacobian.txt
